--- a/src/index.css
+++ b/src/index.css
@@ -34,14 +34,26 @@ label, p, h3 {
   margin: 4px;
   background:black;
   text-align: center;
-  font-size: 15px;
-  padding: 10px;
+  font-size: 10pt;
+  padding: 8px;
   font-family: 'Press Start 2P', cursive;
   color: white;
-  border: none;
+  border: white;
   outline: 2px solid white;
 }
 
 .btn-nes:hover {
-  background: blue
+  color: black;
+  border-color: white;
+  background-color: white;
+}
+
+.btn-nes:active {
+  background: black;
+}
+
+.btn-nes:focus {
+  outline: 4px solid #fff;
+  font-size: 10pt;
+
 }
