--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,30 @@ label, p, h3 {
   outline: 4px solid #fff;
 }
 
+.review-comment-thumb {
+  width: 128px;
+  height: 128px;
+  border: 4px solid white;
+  border-radius: 3%;
+}
+
+@media (max-width: 700px) {
+  .review-comment-thumb{  
+    width: 64px;
+    height: 64px;
+  }
+}
+
+@media (max-width: 400px) {
+  .review-comment-thumb{  
+    width: 32px;
+    height: 32px;
+    border: 2px solid white;
+  }
+}
+
+@media (max-width: 300px) {
+  .review-comment-thumb{  
+    display: none;
+  }
+}
