--- a/src/index.css
+++ b/src/index.css
@@ -40,10 +40,6 @@ p {
   font-size: 10pt;
 }
 
-.card:hover {
-  transform: skew(-1deg);
-}
-
 
 .btn-nes {
   margin: 5px;
@@ -92,6 +88,7 @@ p {
   font-size: 10pt;
 }
 
+
 .review-comment-thumb {
   width: 128px;
   height: 128px;
@@ -121,17 +118,22 @@ p {
 }
 
 
+.card:hover {
+  transform: skew(-1deg);
+}
+
 .fade-in {
-    animation: fadeIn ease 1s;
+    animation: fadeIn ease .5s;
   }
 
 @keyframes fadeIn {
   0% {opacity:0;}
   100% {opacity:1;}
 }
-  
+
+
 .slide-in {
-  animation-duration: .5s;
+  animation-duration: .7s;
   animation-name: slidein;
 }
 
@@ -147,3 +149,19 @@ p {
   }
 }
 
+.slide-from-bottom {
+  animation-duration: .5s;
+  animation-name: slidefrombottom;
+}
+
+@keyframes slidefrombottom {
+  from {
+    margin-top: 100%;
+    height: 300%; 
+  }
+
+  to {
+    margin-top: 0%;
+    height: 100%;
+  }
+}
