--- a/src/index.css
+++ b/src/index.css
@@ -89,13 +89,6 @@ p {
 }
 
 
-.review-comment-thumb {
-  width: 128px;
-  height: 128px;
-  border: 4px solid white;
-  border-radius: 3%;
-}
-
 @media (max-width: 700px) {
   .review-comment-thumb{  
     width: 64px;
@@ -124,13 +117,26 @@ p {
   width: 10em; 
   height: 14em; 
   background-color: #E5E3E3;
-  box-shadow: 4px 4px grey;
+  box-shadow: 5px 4px grey;
   overflow: hidden;
 }
 
 .card:hover {
-  box-shadow: 6px 6px white;
+  box-shadow: 6px 5px #0275d8;
   transform: translateY(3px);
+}
+
+
+.user-thumb {
+  width: 128px;
+  height: 128px;
+  border: 4px solid white;
+  border-radius: 3%;
+}
+
+.user-thumb:hover {
+  box-shadow: 4px 3px #0275d8;
+  transform: translateY(1px);
 }
 
 
