--- a/src/index.css
+++ b/src/index.css
@@ -141,8 +141,12 @@ p {
 
 
 .fade-in {
-    animation: fadeIn ease .5s;
+    animation: fadeIn ease .7s;
   }
+
+.fade-in-slow {
+  animation: fadeIn ease 5s;
+}
 
 @keyframes fadeIn {
   0% {opacity:0;}
