--- a/src/index.css
+++ b/src/index.css
@@ -88,29 +88,6 @@ p {
   font-size: 10pt;
 }
 
-
-@media (max-width: 700px) {
-  .review-comment-thumb{  
-    width: 64px;
-    height: 64px;
-  }
-}
-
-@media (max-width: 400px) {
-  .review-comment-thumb{  
-    width: 32px;
-    height: 32px;
-    border: 2px solid white;
-  }
-}
-
-@media (max-width: 300px) {
-  .review-comment-thumb{  
-    display: none;
-  }
-}
-
-
 .card {
   margin: 1%;
   padding: 1.3%;
@@ -126,7 +103,6 @@ p {
   transform: translateY(3px);
 }
 
-
 .user-thumb {
   width: 128px;
   height: 128px;
@@ -137,6 +113,27 @@ p {
 .user-thumb:hover {
   box-shadow: 4px 3px #0275d8;
   transform: translateY(1px);
+}
+
+@media (max-width: 800px) {
+  .user-thumb{  
+    width: 64px;
+    height: 64px;
+  }
+}
+
+@media (max-width: 450px) {
+  .user-thumb{  
+    width: 32px;
+    height: 32px;
+    border: 2px solid white;
+  }
+}
+
+@media (max-width: 300px) {
+  .user-thumb{  
+    display: none;
+  }
 }
 
 
