--- a/src/index.css
+++ b/src/index.css
@@ -88,8 +88,7 @@ p {
 
 
 .card {
-  margin: 1%;
-  padding: 1.3%;
+  padding: 12px;
   width: 175px; 
   height: 250px; 
   background-color: #E5E3E3;
