--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body, .review, .comment {
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -30,14 +30,15 @@ body {
 }
 
 label, h1, h2, h3, h5, h6 {
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Press Start 2P', 'Segoe UI', sans-serif;
 }
 
 p {
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Press Start 2P', 'Segoe UI', sans-serif;
   font-size: 10pt;
 }
 
+/* ---- BUTTONS ---- */
 
 .btn-nes {
   margin: 5px;
@@ -86,6 +87,7 @@ p {
   font-size: 10pt;
 }
 
+/* ---- CARDS ---- */
 
 .card {
   padding: 12px;
@@ -101,6 +103,8 @@ p {
   transform: translateY(3px);
 }
 
+
+/* ---- THUMB IMG ---- */
 
 .user-thumb {
   width: 128px;
@@ -129,6 +133,8 @@ p {
   }
 }
 
+
+/* ---- ANIMATIONS ---- */
 
 .fade-in {
     animation: fadeIn ease .7s;
